# libHeroMVC

./: README.md  pyproject.toml
.github/workflows/: test_and_deploy_lib.yml
lib/: requirements.txt
lib/src/: app.db  main.py  setup.py
lib/src/libHeroMVCPHANunes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lib/src/test/: test_samples.py
